syntax = "proto3";

import "Vaults.proto";

package secret;

message Rename {
  Secret old_secret = 1;
  string new_name = 2;
}

message Secret {
  Vault.Vault vault = 1;
  string secret_name = 2;
  bytes secret_content = 3;
}

message Directory {
  Vault.Vault vault = 1;
  string secret_directory = 2;
}
